--- a/css/index.css
+++ b/css/index.css
@@ -3,7 +3,6 @@ html{
 	font-family: 'Open Sans', sans-serif;
 }
 body{
-color:#525c65;
 line-height: 1.625rem;
     color: #525c65;
     font-size: 16px;
@@ -84,6 +83,136 @@ h1,h2,h3,h4,h5,h6{
 p{
 	text-align: center;
 }
+
+.c-hamburger {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+  visibility: 	hidden;	
+  z-index: 100000;
+  width: 40px;
+  height: 40px;
+  font-size: 0;
+  position: fixed;	
+  bottom: 	30px;
+  right:30px;
+  text-indent: -9999px;
+  appearance: none;
+  box-shadow: none;
+  border-radius: none;
+  border: none;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+
+.c-hamburger:focus {
+  outline: none;
+}
+.c-hamburger span {
+  display: block;
+  position: absolute;
+  top: 20px;
+  left: 18px;
+  right: 18px;
+  height: 4px;
+  background: white;
+}
+
+.c-hamburger span::before,
+.c-hamburger span::after {
+  position: absolute;
+  display: block;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: #fff;
+  content: "";
+}
+
+.c-hamburger span::before {
+  top: -10px;
+}
+
+.c-hamburger span::after {
+  bottom: -10px;
+}
+
+
+
+
+.c-hamburger--htx {
+ background:rgba(2,179,228,.9);
+}
+
+.c-hamburger--htx span {
+  transition: background 0s 0.3s;
+}
+
+.c-hamburger--htx span::before,
+.c-hamburger--htx span::after {
+  transition-duration: 0.3s, 0.3s;
+  transition-delay: 0.3s, 0s;
+}
+
+.c-hamburger--htx span::before {
+  transition-property: top, transform;
+}
+
+.c-hamburger--htx span::after {
+  transition-property: bottom, transform;
+}
+
+/* active state, i.e. menu open */
+.c-hamburger--htx.is-active {
+  background:rgba(2,179,228,.9);
+}
+
+.c-hamburger--htx.is-active span {
+  background: none;
+}
+
+.c-hamburger--htx.is-active span::before {
+  top: 0;
+  transform: rotate(45deg);
+}
+
+.c-hamburger--htx.is-active span::after {
+  bottom: 0;
+  transform: rotate(-45deg);
+}
+
+.c-hamburger--htx.is-active span::before,
+.c-hamburger--htx.is-active span::after {
+  transition-delay: 0s, 0.3s;
+}
+
+.links{
+	background:rgba(2,179,228,.9);
+	margin-left: 	auto;	
+	margin-right: 	auto;	
+	position: 	fixed;	
+	bottom: 	30px;
+	right: 	30px;
+	height: 	40px;
+	width: 	40px;
+	overflow: 	hidden;	transition: 	all .3s;
+}
+.links-active{
+	height: 100px;
+	width: 	80%;
+}
+.plink{
+	text-decoration: 	none;	
+	color: #e6e6e6;
+	width:100%;
+	display: block;	
+	padding:10px;
+	text-align: 	center;
+}
+
+
 @media only screen and (max-width: 490px)
 {
 	.nav-but{
@@ -98,7 +227,7 @@ p{
 	p{
 		text-align: justify;
 	}
-}
-a{
-	
+	.c-hamburger{
+		visibility: visible	;	
+	}
 }
