--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,7 @@ line-height: 1.625rem;
     color: #525c65;
     font-size: 16px;
     font-family: "Open Sans", sans-serif;
+    padding: 0px;
 }
 .nav{
 	vertical-align: middle;
