--- a/css/index.css
+++ b/css/index.css
@@ -112,7 +112,8 @@ p{
   right:30px;
   text-indent: -9999px;
   appearance: none;
-  box-shadow: none;
+  /*box-shadow: none;*/
+    box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19), 0 8px 17px 0 rgba(0, 0, 0, 0.2);
   border-radius: none;
   border: none;
   cursor: pointer;
@@ -208,6 +209,7 @@ p{
 	bottom: 	30px;
 	right: 	30px;
 	height: 	40px;
+    box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19), 0 8px 17px 0 rgba(0, 0, 0, 0.2);
 	visibility: 	hidden;	
 	width: 	40px;
 	overflow: 	hidden;	transition: 	all .3s;
