--- a/css/index.css
+++ b/css/index.css
@@ -207,7 +207,7 @@ p{
 
 .links{
 	/*background:rgba(2,179,228,.9);*/
-	background: #009688;
+	background: #03a9f4;
 	margin-left: 	auto;	
 	margin-right: 	auto;	
 	position: 	fixed;	
